syntax = "proto3";

package turbine_core;
option go_package = "github.com/meroxa/turbine/core";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service TurbineService {
  rpc Init(InitRequest) returns (google.protobuf.Empty);
  rpc GetResource(NameOrUUID) returns (Resource);
  rpc ReadCollection(ReadCollectionRequest) returns (Collection);
  rpc WriteCollectionToResource(WriteCollectionRequest) returns (google.protobuf.Empty);
  rpc AddProcessToCollection(ProcessCollectionRequest) returns (Collection);
  rpc RegisterSecret(Secret) returns (google.protobuf.Empty);
  rpc ListFunctions(google.protobuf.Empty) returns (ListFunctionsResponse);
  rpc ListResources(google.protobuf.Empty) returns (ListResourcesResponse);
}

message InitRequest {
  string appName = 1;
  string configFilePath = 2;
  enum Language {
    GOLANG = 0;
    PYTHON = 1;
    JAVASCRIPT = 2;
    RUBY = 3;
  }
  Language language = 3;
  string gitSHA = 4;
}

message NameOrUUID {
  string name = 1;
  string uuid = 2;
}

message Resource {
  string uuid = 1;
  string name = 2;
  string type = 3;
  enum Direction {
    DIRECTION_SOURCE = 0;
    DIRECTION_DESTINATION = 1;
  }
  Direction direction = 4;
}

message Collection {
  string name = 1;
  string stream = 2;
  repeated Record records = 3;
}

message Record {
  string key = 1;
  bytes value = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message ReadCollectionRequest {
  Resource resource = 1;
  string collection = 2;
  ResourceConfigs configs = 3;
}

message WriteCollectionRequest {
  Resource resource = 1;
  Collection collection = 2;
  string targetCollection = 3;
  ResourceConfigs configs = 4;
}

message ResourceConfigs {
  repeated ResourceConfig resourceConfig = 1;
}

message ResourceConfig {
  string field = 1;
  string value = 2;
}

message Process {
  string name = 1;
  enum Type {
    GO = 0;
    NODE = 1;
    PYTHON = 2;
    DOCKER = 3;
  }
  Type type = 2;
  string image = 3;
}

message ProcessCollectionRequest {
  Process process = 1;
  Collection collection = 2;
}

message Secret {
  string name = 1;
  string value = 2;
}

message ListFunctionsResponse {
  repeated string functions = 1;
}

message ResourceWithCollection {
  string name = 1;
  string collection = 2;
  enum Direction {
    DIRECTION_SOURCE = 0;
    DIRECTION_DESTINATION = 1;
  }
  Direction direction = 3;
}

message ListResourcesResponse {
  repeated ResourceWithCollection resources = 1;
}